--- a/website.html
+++ b/website.html
@@ -17,7 +17,7 @@
             padding: 10px;
             text-align: center;
         }
-        select, button {
+        select, button, input {
             padding: 10px;
             margin: 5px;
         }
@@ -46,7 +46,10 @@
             <option value="Non-AC">Non-AC</option>
         </select>
 
-        <button onclick="findRate()">Find Rate</button>
+        <label for="days">Number of Days: </label>
+        <input type="number" id="days" value="1" min="1">
+
+        <button onclick="findTotalCost()">Find Total Cost</button>
     </div>
     <div id="rateDisplay" style="margin-top: 20px; font-size: 18px;"></div>
 
@@ -138,11 +141,12 @@
     </table>
 
     <script>
-        function findRate() {
+        function findTotalCost() {
             // Get the selected values
             var location = document.getElementById("location").value;
             var cabType = document.getElementById("cabType").value;
             var acType = document.getElementById("acType").value;
+            var days = parseInt(document.getElementById("days").value);
 
             // Table data
             var rates = {
@@ -163,8 +167,12 @@
             // Find the rate
             var rate = rates[location][cabType][acType];
 
-            // Display the rate
-            document.getElementById("rateDisplay").innerText = `The rate for ${cabType} (${acType}) in ${location} is ₹${rate}`;
+            // Calculate total cost
+            var totalCost = rate * days;
+
+            // Display the total cost
+            document.getElementById("rateDisplay").innerText = 
+                `The rate for ${cabType} (${acType}) in ${location} is ₹${rate} per day. Total cost for ${days} days is ₹${totalCost}.`;
         }
     </script>
 </body>
